[package]
name = "memfs"
description = "An in-memory filesystem-like structure with parameterised nodes for files and directories"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
miette = { version = "4.2", features = ["fancy"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }
