[package]
name = "memfs"
description = "An in-memory, async, filesystem-like structure with parameterised nodes for file and directory data"
license = "MIT"
categories = ["asynchronous", "data-structures", "filesystem"]
keywords = ["directory", "file", "filesystem", "memory", "virtual"]
repository = "https://github.com/xyncro/memfs"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
miette = { version = "4.2", features = ["fancy"] }
thiserror = "1.0"
tokio = { version = "1.17", features = ["full"] }

[dev-dependencies]
anyhow = "1.0"